10-operators/argo-cd/prd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-cd-ingress
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: argo-cd.check-consulting.net
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: argo-cd-server
                port:
                  number: 80
  tls:
    - hosts:
        - argo-cd.check-consulting.net
      secretName: argo-cd.check-consulting.net.tls
